# flagcalc

./: Batchprocesseddata.cpp  CMakeLists.txt  EdgesforHelly.cpp  Formatdata.cpp  Formatgraph.cpp  Graph.cpp  README.md  absmeas.h  ameas.cpp  ameas.cu  ameas.h  asymp.cpp  asymp.h  config.h  cuda.cu  cuda.cuh  cudaengine.cu  cudaengine.cuh  cudafn.cu  cudagraph.cu  cudagraph.cuh  cudameas.cu  db.cpp  db.cu  db.h  feature.cpp  feature.h  funding.json  graphio.cpp  graphio.h  graphoutcome.cpp  graphoutcome.cu  graphoutcome.h  graphs.cpp  graphs.cu  graphs.h  main.cpp  main.cu  mantel.h  math.cpp  (+22 more)
python/: pymeas.py
scripts/: script1.sh  testsuite.sh  testsuiteCUDA.sh  testsuitefingerprints.sh  testsuiteminors.sh  testsuiteplanar.sh  testsuitepython.sh  testsuitequotas.sh  testsuitesetops.sh  testsuitesettheory.sh  testsuitesimple.sh  testsuitethreaded.sh
testgraph/: bipcrit.snt  diestel2_1_2.snt  konig31.snt  konig31_slow.snt  minimal.cfg  minimal2.cfg  minimal3.cfg  out  tmp  tmp.snt
